# flask-app

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  justfile  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-fmt.txt  requirements-lint.txt  requirements-test.txt  requirements.txt  setup.cfg
.github/workflows/: README.md  artifact-registry.yaml  dockerhub.yaml  just-test.yaml  publish.yaml  test.yaml  validate.yaml
requirements/: requirements-dev.txt  requirements-fmt.txt  requirements-lint.in  requirements-lint.txt  requirements-test.txt  requirements.txt
src/: __init__.py  wsgi.py
src/api/: __init__.py  api.py  main.py
src/logger/: __init__.py  config.json
src/logging_config/: __init__.py  config.json
src/tests/: conftest.py
src/web/: __init__.py  main.py  web.py
src/web/templates/: base.html
tests/: conftest.py  context.py  test_api.py  test_home.py  test_web.py
utils/: README.md  install-just.sh  jq-latest.sh  uninstall-just.sh
web/: __init__.py  wsgi.py
web/templates/: home.html
web/views/: __init__.py  home.py
