[metadata]
name = flask-app
version = 0.1.0
url = https://github.com/cbfield/flask-app/
author = Christopher Basketfield
author_email = chris.basketfield@gmail.com
description = A Flask Application
long_description = file: README.md
license = MIT
classifiers = 
    Framework :: Flask
    Intended Audience :: Developers
    License :: MIT
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.9
packages = find:
include_package_data = true
zip_safe = true
